tests/parse_print/random_perturb/set01/change-08/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-08/change-08.essence:3:26:
unexpected (
expecting comma, domain, end of input, rest of statement, or statement
    find x : set (size 2) of inN(1..3)
                          ^^^^^^^